--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/robotastic/ble-ancs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/robotastic/ble-ancs/issues"
+  },
   "keywords": [
     "Apple",
     "ANCS",
