--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   },
   "optionalDependencies": {
     "bluetooth-hci-socket": "~0.4.0",
-    "bplist-parser": "0.0.6",
-    "xpc-connection": "~0.1.4"
+    "bplist-parser": "0.0.6"
   },
   "devDependencies": {
     "jshint": "latest",
